--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -203,26 +203,19 @@ label:focus {
     box-shadow: inset 0 -3px #f53c3c;
 }
 
+#wireplumber,
 #pulseaudio {
     /* background-color: #f1c40f; */
     /* color: #000000; */
     color: #ffffff;
-    box-shadow: inset 0 -3px #f1c40f;
+    box-shadow: inset 0 -3px #64727D;
     /* min-width: 50px; /1* trial and errored this num *1/ */
 }
 
+#wireplumber.muted,
 #pulseaudio.muted {
     background-color: #90b1b1;
     color: #2a5c45;
-}
-
-#wireplumber {
-    background-color: #fff0f5;
-    color: #000000;
-}
-
-#wireplumber.muted {
-    background-color: #f53c3c;
 }
 
 #custom-media {
